--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,56 @@
         </ul>
     </section>
     <!-- portfolio  -->
-    <section></section>
-
+    <section>
+        <ul>
+            <li>
+                <img src="./img/port1.jpg" alt="">
+            <h3> Технокряк
+            </h3> 
+            <p>Веб-сайт</p>
+        </li>
+            <li>
+                <img src="./img/port2.jpg" alt="">
+                <h3>Постер New Orlean vs Golden Stars</h3>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./img/port3.jpg" alt="" width="380" height="294">
+                <h3>Ресторан Seafood</h3>
+                <p>Приложение</p></li>
+            <li>
+                <img src="./img/port4.jpg" alt="" width="380" height="294">
+                <h3>Проект Prime</h3>
+                <p>Маркетинг</p></li>
+            <li>
+                <img src="./img/port5.jpg" alt="" width="380" height="294">
+                <h3>Проект Boxes</h3>
+                <p>Приложение</p>
+            </li>
+            <li>
+                <img src="./img/port6.jpg" alt="" width="380" height="294">
+                <h3>Inspiration has no Borders</h3>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./img/port7.jpg" alt="" width="380" height="294">
+                <h3>Издание Limited Edition</h3>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./img/port8.jpg" alt="" width="380" height="294">
+                <h3>Проект LAB</h3>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="./img/port9.jpg" alt="" width="380" height="294">
+                <h3>Growing Business</h3>
+                <p>Приложение</p>
+            </li>
+        </ul>
+    </section>
   </body>
 </html>
-
-
 <!-- footer -->
 <footer>
     <h3><a href=""> Web Studio</a></h3>
