--- a/index.html
+++ b/index.html
@@ -4,40 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
+  <body class="body">
     <!-- website hat  -->
-    <header>
+    <header class="header">
       <nav>
-        <a href="/">Web Studio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="/" class="section-title"> <span class="web"> Web</span> Studio </a>
+        <ul class="site-title list">
+          <li><a href="" class="link">Студия</a></li>
+          <li><a href="" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
-        <ul>
+        <ul class="info-title list" >
           <li>
-            <a href="mailto:info@devstudio.com ">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com " class="email">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111"> +38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="tel"> +38 096 111 11 11</a>
           </li>
         </ul>
       </nav>
     </header>
     <!-- one  -->
-    <section>
-      <h1>эффективные решения для вашего бизнеса</h1>
+    <section class="section">
+      <h1 class="section-titel1">эффективные решения для вашего бизнеса</h1>
       <a href="">Заказать услугу</a>
     </section>
     <!-- too -->
-    <section>
-      <ul>
+    <section class="section">
+      <ul class="section-titl2 list" >
         <li>
           <a href=""><img src="./img/antenka.svg" alt="Антена" /></a>
 
-          <h2>Внимание к деталям</h2>
+          <h2 class="section-title">Внимание к деталям</h2>
           <p>
             Идейные соображения, а также начало <br />
             повседневной работы по <br />
@@ -47,7 +47,7 @@
         <li>
           <a href=""> <img src="./img/clok.svg" alt="Часы" /></a>
 
-          <h3>Пунктуальность</h3>
+          <h3 class="section-title">Пунктуальность</h3>
           <p>
             Задача организации, в особенности же рамки и место обучения кадров
             влечет за собой.
@@ -56,7 +56,7 @@
         <li>
           <a href=""> <img src="./img/comp.svg" alt="Комп" /></a>
 
-          <h3>Планирование</h3>
+          <h3 class="section-title">Планирование</h3>
           <p>
             Равным образом консультация с широким активом в значительной степени
             обуславливает.
@@ -65,7 +65,7 @@
         <li>
           <a href=""><img src="./img/robot.svg" alt="Робот" /></a>
 
-          <h3>Современные технологии</h3>
+          <h3 class="section-title">Современные технологии</h3>
           <p>
             Значимость этих проблем настолько очевидна, что реализация плановых
             заданий.
@@ -74,30 +74,31 @@
       </ul>
     </section>
     <!-- three -->
-    <section>
-      <h2>Чем мы занимаемся</h2>
+    <section class="section">
+      <h2 class="section-title">Чем мы занимаемся</h2>
       <img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
-      <p><a href=""> Десктопные приложения</a></p>
+      <p><a href="" class="three"> Десктопные приложения</a></p>
       <img src="./img/2.jpg" alt="мобильный" width="380" height="294" />
-      <p><a href="">Мобильные приложения</a></p>
+      <p><a href="" class="three">Мобильные приложения</a></p>
       <img src="./img/3.jpg" alt="монитор" width="380" height="294" />
-      <p><a href="">Дизайнерские решения</a></p>
+      <p><a href="" class="three">Дизайнерские решения</a></p>
     </section>
     <!-- four -->
-    <section>
+    <section class="section4">
+      <h3 class="section-title">Наша команда</h3>
       <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" />
-      <h3>Джон Смит</h3>
+      <h3 class="section-title">Джон Смит</h3>
       <p>Дизайнер продуктов</p>
-      <ul>
+      <ul class="section-titl4 list">
         <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
         <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
         <li><a href="" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/марта.jpg" alt="Марта Стюарт" width="278" height="260" />
-      <h3>Марта Стюарт</h3>
+      <h3 class="section-title">Марта Стюарт</h3>
       <p>Фронтенд Разработчик</p>
-      <ul>
+      <ul class="section-titl4 list">
         <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
         <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
@@ -109,18 +110,18 @@
         width="278"
         height="260"
       />
-      <h3>Роберт Джекис</h3>
+      <h3 class="section-title">Роберт Джекис</h3>
       <p>Маркетинг</p>
-      <ul>
+      <ul class="section-titl4 list">
         <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
         <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
         <li><a href="" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/мартин.jpg" alt="Мартин Доу" width="278" height="260" />
-      <h3>Мартин Доу</h3>
+      <h3 class="section-title">Мартин Доу</h3>
       <p>Разработка пользовательского интерфейса</p>
-      <ul>
+      <ul class="section-titl4 list">
         <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
         <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
@@ -129,8 +130,8 @@
     </section>
     <!-- five -->
     <section>
-      <h2>Постоянные клиенты</h2>
-      <ul>
+      <h2 class="section-title">Постоянные клиенты</h2>
+      <ul class="section-titl5 list">
         <li>
           <a href=""><img src="./img/logo1.svg" alt="" /></a>
         </li>
@@ -152,16 +153,16 @@
       </ul>
     </section>
     <!--footer  -->
-    <footer>
-      <h3><a href=""> Web Studio</a></h3>
+    <footer class="footer">
+      <h3 ><a href="" class="footer-title"><span class="web"> Web</span> Studio</a></h3>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <p><a href="">info@example.com</a></p>
-        <p><a href="">+38 099 111 11 11</a></p>
+        <p class="adres">г. Киев, пр-т Леси Украинки, 26</p>
+        <p ><a href=""class=" adres-title">info@example.com</a></p>
+        <p ><a href="" class="adres-title">+38 099 111 11 11</a></p>
       </address>
 
       <p>присоединяйтесь</p>
-      <ul>
+      <ul class="footer-title list">
         <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
         <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
