трохи добавив стилі

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
     </header>
     <!-- nav -->
     <section>
+      <nav>
         <ul>
             <li><a href="">Все</a></li>
             <li><a href="">Веб-сайты</a></li>
@@ -37,6 +38,7 @@
             <li><a href="">Маркетинг</a></li>
            
         </ul>
+      </nav>
     </section>
     <!-- portfolio  -->
     <section>
