--- a/index.html
+++ b/index.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body class="body">
-    <!-- website hat  -->
-    <header class="header">
+    <!-- website head -->
+    <header >
       <nav>
-        <a href="/" class="section-title"> <span class="web"> Web</span> Studio </a>
-        <ul class="site-title list">
+        <a href="./index.html" class="section-head"> <span class="web-head"> Web</span> Studio </a>
+        <ul class="web-title list">
           <li><a href="" class="link">Студия</a></li>
           <li><a href="" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
         <ul class="info-title list" >
           <li>
-            <a href="mailto:info@devstudio.com " class="email">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com ">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="tel"> +38 096 111 11 11</a>
+            <a href="tel:+380961111111" > +38 096 111 11 11</a>
           </li>
         </ul>
       </nav>
     </header>
-    <!-- one  -->
-    <section class="section">
-      <h1 class="section-titel1">эффективные решения для вашего бизнеса</h1>
-      <a href="">Заказать услугу</a>
+    <!-- section one  -->
+    <section class="section-one">
+      <h1 >эффективные решения для вашего бизнеса</h1>
+      <a href="" class="button one">Заказать услугу</a>
     </section>
-    <!-- too -->
+    <!-- section too -->
     <section class="section">
       <ul class="section-titl2 list" >
         <li>
@@ -73,7 +73,7 @@
         </li>
       </ul>
     </section>
-    <!-- three -->
+    <!-- What are we doing -->
     <section class="section">
       <h2 class="section-title">Чем мы занимаемся</h2>
       <img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
@@ -83,7 +83,7 @@
       <img src="./img/3.jpg" alt="монитор" width="380" height="294" />
       <p><a href="" class="three">Дизайнерские решения</a></p>
     </section>
-    <!-- four -->
+    <!-- team -->
     <section class="section4">
       <h3 class="section-title">Наша команда</h3>
       <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" />
@@ -128,7 +128,7 @@
         <li><a href="" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
     </section>
-    <!-- five -->
+    <!-- Regular customers -->
     <section>
       <h2 class="section-title">Постоянные клиенты</h2>
       <ul class="section-titl5 list">
