--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="./index.html" class="section-head"> <span class="web-head"> Web</span> Studio </a>
         <ul class="web-title list">
           <li><a href="" class="link">Студия</a></li>
-          <li><a href="" class="link">Портфолио</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
         <ul class="info-title list" >
@@ -33,9 +33,9 @@
     </section>
     <!-- section too -->
     <section class="section">
-      <ul class="section-titl2 list" >
+      <ul class="list" >
         <li>
-          <a href=""><img src="./img/antenka.svg" alt="Антена" /></a>
+          <a href="" class="link"><img src="./img/antenka.svg" alt="Антена" /></a>
 
           <h2 class="section-title">Внимание к деталям</h2>
           <p>
@@ -45,7 +45,7 @@
           </p>
         </li>
         <li>
-          <a href=""> <img src="./img/clok.svg" alt="Часы" /></a>
+          <a href="" class="link"> <img src="./img/clok.svg" alt="Часы" /></a>
 
           <h3 class="section-title">Пунктуальность</h3>
           <p>
@@ -54,7 +54,7 @@
           </p>
         </li>
         <li>
-          <a href=""> <img src="./img/comp.svg" alt="Комп" /></a>
+          <a href="" class="link"> <img src="./img/comp.svg" alt="Комп" /></a>
 
           <h3 class="section-title">Планирование</h3>
           <p>
@@ -63,7 +63,7 @@
           </p>
         </li>
         <li>
-          <a href=""><img src="./img/robot.svg" alt="Робот" /></a>
+          <a href="" class="link"><img src="./img/robot.svg" alt="Робот" /></a>
 
           <h3 class="section-title">Современные технологии</h3>
           <p>
@@ -75,34 +75,34 @@
     </section>
     <!-- What are we doing -->
     <section class="section">
-      <h2 class="section-title">Чем мы занимаемся</h2>
+      <h2 class="section-title what">Чем мы занимаемся</h2>
       <img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
-      <p><a href="" class="three"> Десктопные приложения</a></p>
+      <p><a href="" class="what"> Десктопные приложения</a></p>
       <img src="./img/2.jpg" alt="мобильный" width="380" height="294" />
-      <p><a href="" class="three">Мобильные приложения</a></p>
+      <p><a href="" class="what">Мобильные приложения</a></p>
       <img src="./img/3.jpg" alt="монитор" width="380" height="294" />
-      <p><a href="" class="three">Дизайнерские решения</a></p>
+      <p><a href="" class="what">Дизайнерские решения</a></p>
     </section>
     <!-- team -->
-    <section class="section4">
+    <section class="section team">
       <h3 class="section-title">Наша команда</h3>
       <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" />
       <h3 class="section-title">Джон Смит</h3>
       <p>Дизайнер продуктов</p>
       <ul class="section-titl4 list">
-        <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" aria-label="ссылка на Линкеди">Линкедин</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/марта.jpg" alt="Марта Стюарт" width="278" height="260" />
       <h3 class="section-title">Марта Стюарт</h3>
       <p>Фронтенд Разработчик</p>
-      <ul class="section-titl4 list">
-        <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" aria-label="ссылка на Линкеди">Линкедин</a></li>
+      <ul class="section-title list">
+        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img
         src="./img/роберт.jpg"
@@ -113,42 +113,42 @@
       <h3 class="section-title">Роберт Джекис</h3>
       <p>Маркетинг</p>
       <ul class="section-titl4 list">
-        <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" aria-label="ссылка на Линкеди">Линкедин</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/мартин.jpg" alt="Мартин Доу" width="278" height="260" />
       <h3 class="section-title">Мартин Доу</h3>
       <p>Разработка пользовательского интерфейса</p>
       <ul class="section-titl4 list">
-        <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" aria-label="ссылка на Линкеди">Линкедин</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
     </section>
     <!-- Regular customers -->
-    <section>
+    <sectionс class="section" >
       <h2 class="section-title">Постоянные клиенты</h2>
-      <ul class="section-titl5 list">
+      <ul class="section-title list">
         <li>
-          <a href=""><img src="./img/logo1.svg" alt="" /></a>
+          <a href="" class="link"><img src="./img/logo1.svg" alt="YA & CO" /></a>
         </li>
         <li>
-          <a href=""><img src="./img/logo2.svg" alt="" /></a>
+          <a href="" class="link"><img src="./img/logo2.svg" alt="Company tagline here" /></a>
         </li>
         <li>
-          <a href=""><img src="./img/logo3.svg" alt="" /></a>
+          <a href="" class="link"><img src="./img/logo3.svg" alt="company" /></a>
         </li>
         <li>
-          <a href=""><img src="./img/logo4.svg" alt="" /></a>
+          <a href="" class="link"><img src="./img/logo4.svg" alt="Foster peters" /></a>
         </li>
         <li>
-          <a href=""><img src="./img/logo5.svg" alt="" /></a>
+          <a href="" class="link"><img src="./img/logo5.svg" alt="Brand" /></a>
         </li>
         <li>
-          <a href=""><img src="./img/logo6.svg" alt="" /></a>
+          <a href="" class="link"><img src="./img/logo6.svg" alt="company nag line" /></a>
         </li>
       </ul>
     </section>
@@ -157,24 +157,24 @@
       <h3 ><a href="" class="footer-title"><span class="web"> Web</span> Studio</a></h3>
       <address>
         <p class="adres">г. Киев, пр-т Леси Украинки, 26</p>
-        <p ><a href=""class=" adres-title">info@example.com</a></p>
-        <p ><a href="" class="adres-title">+38 099 111 11 11</a></p>
+        <p ><a href=""class=" adres-title link" >info@example.com</a></p>
+        <p ><a href="" class="adres-title link" >+38 099 111 11 11</a></p>
       </address>
 
-      <p>присоединяйтесь</p>
+      <p class="white">присоединяйтесь</p>
       <ul class="footer-title list">
-        <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" aria-label="ссылка на Линкеди">Линкедин</a></li>
+        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href=""  class="link" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href=""  class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href=""  class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
 
-      <p>подписаться на рассылку</p>
+      <p class="white">подписаться на рассылку</p>
       <div>
         <input name="E-mail" type="text" value="E-mail" />
-        <a href="">Подписаться</a>
+        <a href="" class="button">Подписаться</a>
       </div>
-      <p>2020 | Developed by GoIT Students</p>
+      <p class="adres-title">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
