--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
     <!-- website hat  -->
     <header>
       <nav>
-        <a href="/">Web Studio</a>
+        <a href="./index.html">Web Studio</a>
         <ul>
-          <li><a href="">Студия</a></li>
+          <li><a href="./index.html">Студия</a></li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
