розмітка портфоліо і css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body class="body">
     <!-- website head -->
     <header >
-      <nav>
-        <a href="./index.html" class="section-head"> <span class="web-head"> Web</span> Studio </a>
+      <nav class="nav-text">
+        <a href="./index.html" class="section-logo"> <span class="web-logo"> Web</span> Studio </a>
         <ul class="web-title list">
           <li><a href="" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -28,11 +29,11 @@
     </header>
     <!-- section one  -->
     <section class="section-one">
-      <h1 >эффективные решения для вашего бизнеса</h1>
+      <h1 >эффективные решения <br> для вашего бизнеса</h1>
       <a href="" class="button one">Заказать услугу</a>
     </section>
     <!-- section too -->
-    <section class="section">
+    <section class="section-too">
       <ul class="list" >
         <li>
           <a href="" class="link"><img src="./img/antenka.svg" alt="Антена" /></a>
@@ -75,7 +76,7 @@
     </section>
     <!-- What are we doing -->
     <section class="section">
-      <h2 class="section-title what">Чем мы занимаемся</h2>
+      <h2 class="section-title what hat">Чем мы занимаемся</h2>
       <img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
       <p><a href="" class="what"> Десктопные приложения</a></p>
       <img src="./img/2.jpg" alt="мобильный" width="380" height="294" />
@@ -85,18 +86,18 @@
     </section>
     <!-- team -->
     <section class="section team">
-      <h3 class="section-title">Наша команда</h3>
+      <h3 class="section-title hat">Наша команда</h3>
       <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" />
-      <h3 class="section-title">Джон Смит</h3>
+      <h3 class="section-title name">Джон Смит</h3>
       <p>Дизайнер продуктов</p>
-      <ul class="section-titl4 list">
+      <ul class="section-title list">
         <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
         <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
         <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/марта.jpg" alt="Марта Стюарт" width="278" height="260" />
-      <h3 class="section-title">Марта Стюарт</h3>
+      <h3 class="section-title name">Марта Стюарт</h3>
       <p>Фронтенд Разработчик</p>
       <ul class="section-title list">
         <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
@@ -110,7 +111,7 @@
         width="278"
         height="260"
       />
-      <h3 class="section-title">Роберт Джекис</h3>
+      <h3 class="section-title name">Роберт Джекис</h3>
       <p>Маркетинг</p>
       <ul class="section-titl4 list">
         <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
@@ -119,7 +120,7 @@
         <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/мартин.jpg" alt="Мартин Доу" width="278" height="260" />
-      <h3 class="section-title">Мартин Доу</h3>
+      <h3 class="section-title name">Мартин Доу</h3>
       <p>Разработка пользовательского интерфейса</p>
       <ul class="section-titl4 list">
         <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
@@ -130,7 +131,7 @@
     </section>
     <!-- Regular customers -->
     <sectionс class="section" >
-      <h2 class="section-title">Постоянные клиенты</h2>
+      <h2 class="section-title hat">Постоянные клиенты</h2>
       <ul class="section-title list">
         <li>
           <a href="" class="link"><img src="./img/logo1.svg" alt="YA & CO" /></a>
