--- a/portfolio.html
+++ b/portfolio.html
@@ -27,66 +27,90 @@
         </ul>
       </nav>
     </header>
-    <!-- nav -->
+    <!-- button -->
     <section>
-      <nav>
-        <ul>
-            <li><a href="">Все</a></li>
-            <li><a href="">Веб-сайты</a></li>
-            <li><a href="">Приложения</a></li>
-            <li><a href="">Дизайн</a></li>
-            <li><a href="">Маркетинг</a></li>
+     <button type="button">Все</button>
+     <button type="button">Веб-сайты</button>
+     <button type="button">Приложения</button>
+     <button type="button">Дизайн</button>
+     <button type="button">Маркетинг</button>
            
-        </ul>
-      </nav>
     </section>
     <!-- portfolio  -->
     <section>
         <ul>
             <li>
-                <img src="./img/port1.jpg" alt="">
-            <h3> Технокряк
-            </h3> 
-            <p>Веб-сайт</p>
-        </li>
-            <li>
+              <a href="">  
+                <img src="./img/port1.jpg" alt="" > 
+                <h2>Технокряк</h2> 
+                <p>Веб-сайт</p> 
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+              </a>
+            </li>
+            <li> 
+              <a href="">
                 <img src="./img/port2.jpg" alt="">
                 <h3>Постер New Orlean vs Golden Stars</h3>
                 <p>Дизайн</p>
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+              </a>
             </li>
             <li>
+              <a href="">
                 <img src="./img/port3.jpg" alt="" width="380" height="294">
                 <h3>Ресторан Seafood</h3>
                 <p>Приложение</p></li>
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+              </a>
             <li>
+              <a href="">
                 <img src="./img/port4.jpg" alt="" width="380" height="294">
                 <h3>Проект Prime</h3>
-                <p>Маркетинг</p></li>
+                <p>Маркетинг</p>
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+              </a>
+            </li>
+            
             <li>
+              <a href="">
                 <img src="./img/port5.jpg" alt="" width="380" height="294">
                 <h3>Проект Boxes</h3>
                 <p>Приложение</p>
-            </li>
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+              </a>
+             </li>
             <li>
+              <a href="">
                 <img src="./img/port6.jpg" alt="" width="380" height="294">
                 <h3>Inspiration has no Borders</h3>
                 <p>Веб-сайт</p>
-            </li>
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+              </a>
+              </li>
             <li>
+              <a href="">
                 <img src="./img/port7.jpg" alt="" width="380" height="294">
                 <h3>Издание Limited Edition</h3>
                 <p>Дизайн</p>
-            </li>
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+              </a>
+              </li>
             <li>
+              <a href="">
                 <img src="./img/port8.jpg" alt="" width="380" height="294">
                 <h3>Проект LAB</h3>
                 <p>Маркетинг</p>
-            </li>
-            <li>
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+              </a>
+              </li>
+            <li> 
+              <a href="">
                 <img src="./img/port9.jpg" alt="" width="380" height="294">
                 <h3>Growing Business</h3>
                 <p>Приложение</p>
-            </li>
+                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+              </a>
+              </li>
         </ul>
     </section>
   </body>
