--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body class="body">
     <!-- website head -->
@@ -75,18 +75,18 @@
       </ul>
     </section>
     <!-- What are we doing -->
-    <section class="section">
-      <h2 class="section-title what hat">Чем мы занимаемся</h2>
+    <section >
+      <h2 class="section-title what-we">Чем мы занимаемся</h2>
       <img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
-      <p><a href="" class="what"> Десктопные приложения</a></p>
+      <p><a href="" class="what-doing"> Десктопные приложения</a></p>
       <img src="./img/2.jpg" alt="мобильный" width="380" height="294" />
-      <p><a href="" class="what">Мобильные приложения</a></p>
+      <p><a href="" class="what-doing">Мобильные приложения</a></p>
       <img src="./img/3.jpg" alt="монитор" width="380" height="294" />
-      <p><a href="" class="what">Дизайнерские решения</a></p>
+      <p><a href="" class="what-doing">Дизайнерские решения</a></p>
     </section>
     <!-- team -->
     <section class="section team">
-      <h3 class="section-title hat">Наша команда</h3>
+      <h3 class="section-title what-we">Наша команда</h3>
       <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" />
       <h3 class="section-title name">Джон Смит</h3>
       <p>Дизайнер продуктов</p>
@@ -131,7 +131,7 @@
     </section>
     <!-- Regular customers -->
     <sectionс class="section" >
-      <h2 class="section-title hat">Постоянные клиенты</h2>
+      <h2 class="section-title what-we">Постоянные клиенты</h2>
       <ul class="section-title list">
         <li>
           <a href="" class="link"><img src="./img/logo1.svg" alt="YA & CO" /></a>
@@ -155,14 +155,14 @@
     </section>
     <!--footer  -->
     <footer class="footer">
-      <h3 ><a href="" class="footer-title"><span class="web"> Web</span> Studio</a></h3>
+      <h3 ><a href="" class="footer-logo"><span class="web-logo"> Web</span> Studio</a></h3>
       <address>
-        <p class="adres">г. Киев, пр-т Леси Украинки, 26</p>
+        <p class="adres text">г. Киев, пр-т Леси Украинки, 26</p>
         <p ><a href=""class=" adres-title link" >info@example.com</a></p>
         <p ><a href="" class="adres-title link" >+38 099 111 11 11</a></p>
       </address>
 
-      <p class="white">присоединяйтесь</p>
+      <p class="join-in">присоединяйтесь</p>
       <ul class="footer-title list">
         <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href=""  class="link" aria-label="ссылка на Твитер">Твитер</a></li>
@@ -170,7 +170,7 @@
         <li><a href=""  class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
 
-      <p class="white">подписаться на рассылку</p>
+      <p class="join-in text">подписаться на рассылку</p>
       <div>
         <input name="E-mail" type="text" value="E-mail" />
         <a href="" class="button">Подписаться</a>
