portfolio and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
-    <link rel="stylesheet" href="/css/style.css" />
-  </head>
 
-  <body>
-    <!-- website hat  -->
-    <header>
-      <nav>
-        <a href="./index.html">Web Studio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com ">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111"> +38 096 111 11 11</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Web Studio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+</head>
+
+<body class="body">
+  <!-- website head -->
+  <header>
+    <nav class="nav-text">
+      <a href="./index.html" class="section-logo"> <span class="web-logo"> Web</span> Studio </a>
+      <ul class="web-title list">
+        <li><a href="./index.html" class="link">Студия</a></li>
+        <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+        <li><a href="" class="link">Контакты</a></li>
+      </ul>
+      <ul class="info-title list">
+        <li>
+          <a href="mailto:info@devstudio.com ">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111"> +38 096 111 11 11</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
     <!-- button -->
-    <section>
+    <section class="portfolio-button" >
      <button type="button">Все</button>
      <button type="button">Веб-сайты</button>
      <button type="button">Приложения</button>
@@ -42,73 +45,73 @@
             <li>
               <a href="">  
                 <img src="./img/port1.jpg" alt="" > 
-                <h2>Технокряк</h2> 
-                <p>Веб-сайт</p> 
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+                <h2 class="h-title">Технокряк</h2> 
+                <p class="p-title">Веб-сайт</p> 
+                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
               </a>
             </li>
             <li> 
               <a href="">
                 <img src="./img/port2.jpg" alt="">
-                <h3>Постер New Orlean vs Golden Stars</h3>
-                <p>Дизайн</p>
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+                <h2 class="h-title">Постер New Orlean vs Golden Stars</h2>
+                <p class="p-title">Дизайн</p>
+                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
               </a>
             </li>
             <li>
               <a href="">
                 <img src="./img/port3.jpg" alt="" width="380" height="294">
-                <h3>Ресторан Seafood</h3>
-                <p>Приложение</p></li>
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+                <h2 class="h-title">Ресторан Seafood</h2>
+                <p class="p-title">Приложение</p></li>
+                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
               </a>
             <li>
               <a href="">
                 <img src="./img/port4.jpg" alt="" width="380" height="294">
-                <h3>Проект Prime</h3>
-                <p>Маркетинг</p>
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+                <h2 class="h-title">Проект Prime</h2>
+                <p class="p-title">Маркетинг</p>
+                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
               </a>
             </li>
             
             <li>
               <a href="">
                 <img src="./img/port5.jpg" alt="" width="380" height="294">
-                <h3>Проект Boxes</h3>
-                <p>Приложение</p>
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+                <h2 class="h-title">Проект Boxes</h2>
+                <p class="p-title">Приложение</p>
+                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
               </a>
              </li>
             <li>
               <a href="">
                 <img src="./img/port6.jpg" alt="" width="380" height="294">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+                <h2 class="h-title">Inspiration has no Borders</h2>
+                <p class="p-title">Веб-сайт</p>
+                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
               </a>
               </li>
             <li>
               <a href="">
                 <img src="./img/port7.jpg" alt="" width="380" height="294">
-                <h3>Издание Limited Edition</h3>
-                <p>Дизайн</p>
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+                <h2 class="h-title">Издание Limited Edition</h2>
+                <p class="p-title">Дизайн</p>
+                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
               </a>
               </li>
             <li>
               <a href="">
                 <img src="./img/port8.jpg" alt="" width="380" height="294">
-                <h3>Проект LAB</h3>
-                <p>Маркетинг</p>
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+                <h2 class="h-title">Проект LAB</h2>
+                <p class="p-title">Маркетинг</p>
+                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
               </a>
               </li>
             <li> 
               <a href="">
                 <img src="./img/port9.jpg" alt="" width="380" height="294">
-                <h3>Growing Business</h3>
-                <p>Приложение</p>
-                <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
+                <h2 class="h-title">Growing Business</h2>
+                <p class="p-title">Приложение</p>
+                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
               </a>
               </li>
         </ul>
@@ -116,29 +119,29 @@
   </body>
 </html>
 <!-- footer -->
-<footer>
-    <h3><a href=""> Web Studio</a></h3>
+  <footer class="footer">
+    <h3><a href="" class="footer-logo"><span class="web-logo"> Web</span> Studio</a></h3>
     <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <p><a href="">info@example.com</a></p>
-        <p><a href="">+38 099 111 11 11</a></p>
+      <p class="adres text">г. Киев, пр-т Леси Украинки, 26</p>
+      <p><a href="" class=" adres-title link">info@example.com</a></p>
+      <p><a href="" class="adres-title link">+38 099 111 11 11</a></p>
     </address>
-
-    <p>присоединяйтесь</p>
-    <ul>
-        <li><a href="" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" aria-label="ссылка на Линкеди">Линкедин</a></li>
+  
+    <p class="join-in">присоединяйтесь</p>
+    <ul class="footer-title list">
+      <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+      <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
+      <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+      <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
     </ul>
-
-    <p>подписаться на рассылку</p>
+  
+    <p class="join-in text">подписаться на рассылку</p>
     <div>
-        <input name="E-mail" type="text" value="E-mail" />
-        <a href="">Подписаться</a>
+      <input name="E-mail" type="text" value="E-mail" />
+      <a href="" class="button">Подписаться</a>
     </div>
-    <p>2020 | Developed by GoIT Students</p>
-</footer>
+    <p class="adres-title">2020 | Developed by GoIT Students</p>
+  </footer>
 </body>
 
 </html>
