--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
       <h3 class="section-title name">Джон Смит</h3>
       <p>Дизайнер продуктов</p>
       <ul class="section-title list">
-        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
+        <li><a href="" class="link color " aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/марта.jpg" alt="Марта Стюарт" width="278" height="260" />
       <h3 class="section-title name">Марта Стюарт</h3>
       <p>Фронтенд Разработчик</p>
       <ul class="section-title list">
-        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img
         src="./img/роберт.jpg"
@@ -113,42 +113,42 @@
       />
       <h3 class="section-title name">Роберт Джекис</h3>
       <p>Маркетинг</p>
-      <ul class="section-titl4 list">
-        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
+      <ul class="section-title list ">
+        <li ><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/мартин.jpg" alt="Мартин Доу" width="278" height="260" />
       <h3 class="section-title name">Мартин Доу</h3>
       <p>Разработка пользовательского интерфейса</p>
-      <ul class="section-titl4 list">
-        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
+      <ul class="section-title list">
+        <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
     </section>
     <!-- Regular customers -->
     <sectionс class="section" >
       <h2 class="section-title what-we">Постоянные клиенты</h2>
       <ul class="section-title list">
-        <li>
+        <li class="regular">
           <a href="" class="link"><img src="./img/logo1.svg" alt="YA & CO" /></a>
         </li>
-        <li>
+        <li class="regular">
           <a href="" class="link"><img src="./img/logo2.svg" alt="Company tagline here" /></a>
         </li>
-        <li>
+        <li class="regular">
           <a href="" class="link"><img src="./img/logo3.svg" alt="company" /></a>
         </li>
-        <li>
+        <li class="regular">
           <a href="" class="link"><img src="./img/logo4.svg" alt="Foster peters" /></a>
         </li>
-        <li>
+        <li class="regular">
           <a href="" class="link"><img src="./img/logo5.svg" alt="Brand" /></a>
         </li>
-        <li>
+        <li >
           <a href="" class="link"><img src="./img/logo6.svg" alt="company nag line" /></a>
         </li>
       </ul>
@@ -164,10 +164,10 @@
 
       <p class="join-in">присоединяйтесь</p>
       <ul class="footer-title list">
-        <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href=""  class="link" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href=""  class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href=""  class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
+        <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+        <li><a href=""  class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
+        <li><a href=""  class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+        <li><a href=""  class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
 
       <p class="join-in text">подписаться на рассылку</p>
