--- a/portfolio.html
+++ b/portfolio.html
@@ -1,145 +1,200 @@
-<!DOCTYPE html>
+<!DOCTYPE >
 <html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Web Studio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Studio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<body class="body">
-  <!-- website head -->
-  <header>
-    <nav class="nav-text">
-      <a href="./index.html" class="section-logo"> <span class="web-logo"> Web</span> Studio </a>
-      <ul class="web-title list">
-        <li><a href="./index.html" class="link">Студия</a></li>
-        <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-        <li><a href="" class="link">Контакты</a></li>
-      </ul>
-      <ul class="info-title list">
-        <li>
-          <a href="mailto:info@devstudio.com ">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111"> +38 096 111 11 11</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-    <!-- button -->
-    <section class="portfolio-button" >
-     <button type="button">Все</button>
-     <button type="button">Веб-сайты</button>
-     <button type="button">Приложения</button>
-     <button type="button">Дизайн</button>
-     <button type="button">Маркетинг</button>
-           
-    </section>
-    <!-- portfolio  -->
-    <section>
-        <ul>
-            <li>
-              <a href="">  
-                <img src="./img/port1.jpg" alt="" > 
-                <h2 class="h-title">Технокряк</h2> 
-                <p class="p-title">Веб-сайт</p> 
-                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
-              </a>
-            </li>
-            <li> 
-              <a href="">
-                <img src="./img/port2.jpg" alt="">
-                <h2 class="h-title">Постер New Orlean vs Golden Stars</h2>
-                <p class="p-title">Дизайн</p>
-                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/port3.jpg" alt="" width="380" height="294">
-                <h2 class="h-title">Ресторан Seafood</h2>
-                <p class="p-title">Приложение</p></li>
-                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
-              </a>
-            <li>
-              <a href="">
-                <img src="./img/port4.jpg" alt="" width="380" height="294">
-                <h2 class="h-title">Проект Prime</h2>
-                <p class="p-title">Маркетинг</p>
-                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
-              </a>
-            </li>
-            
-            <li>
-              <a href="">
-                <img src="./img/port5.jpg" alt="" width="380" height="294">
-                <h2 class="h-title">Проект Boxes</h2>
-                <p class="p-title">Приложение</p>
-                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
-              </a>
-             </li>
-            <li>
-              <a href="">
-                <img src="./img/port6.jpg" alt="" width="380" height="294">
-                <h2 class="h-title">Inspiration has no Borders</h2>
-                <p class="p-title">Веб-сайт</p>
-                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
-              </a>
-              </li>
-            <li>
-              <a href="">
-                <img src="./img/port7.jpg" alt="" width="380" height="294">
-                <h2 class="h-title">Издание Limited Edition</h2>
-                <p class="p-title">Дизайн</p>
-                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
-              </a>
-              </li>
-            <li>
-              <a href="">
-                <img src="./img/port8.jpg" alt="" width="380" height="294">
-                <h2 class="h-title">Проект LAB</h2>
-                <p class="p-title">Маркетинг</p>
-                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
-              </a>
-              </li>
-            <li> 
-              <a href="">
-                <img src="./img/port9.jpg" alt="" width="380" height="294">
-                <h2 class="h-title">Growing Business</h2>
-                <p class="p-title">Приложение</p>
-                <p class="p-title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> 
-              </a>
-              </li>
+  <body class="body">
+    <!-- website head -->
+    <header>
+      <nav class="nav-text">
+        <a href="./index.html" class="section-logo">
+          <span class="web-logo"> Web</span> Studio
+        </a>
+        <ul class="web-title list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
-    </section>
-  </body>
-</html>
-<!-- footer -->
-  <footer class="footer">
-    <h3><a href="" class="footer-logo"><span class="web-logo"> Web</span> Studio</a></h3>
-    <address>
-      <p class="adres text">г. Киев, пр-т Леси Украинки, 26</p>
-      <p><a href="" class=" adres-title link">info@example.com</a></p>
-      <p><a href="" class="adres-title link">+38 099 111 11 11</a></p>
-    </address>
-  
-    <p class="join-in">присоединяйтесь</p>
-    <ul class="footer-title list">
-      <li><a href="" class="link" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-      <li><a href="" class="link" aria-label="ссылка на Твитер">Твитер</a></li>
-      <li><a href="" class="link" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-      <li><a href="" class="link" aria-label="ссылка на Линкеди">Линкедин</a></li>
-    </ul>
+        <ul class="info-title list">
+          <li>
+            <a href="mailto:info@devstudio.com ">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111"> +38 096 111 11 11</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <!-- button -->
+      <section class="portfolio-button">
+        <button type="button" class="nav-portfolio">Все</button>
+        <button type="button" class="nav-portfolio">Веб-сайты</button>
+        <button type="button" class="nav-portfolio">Приложения</button>
+        <button type="button" class="nav-portfolio">Дизайн</button>
+        <button type="button" class="nav-portfolio">Маркетинг</button>
+      </section>
+      <!-- portfolio  -->
+      <section>
+        <ul>
+          <li class="list">
+            <a href="" class="decoration">
+              <img src="./img/port1.jpg" alt="" />
+              <h2 class="h-title">Технокряк</h2>
+              <p class="p-title">Веб-сайт</p>
+              <p class="p-title">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li class="list">
+            <a href="" class="decoration">
+              <img src="./img/port2.jpg" alt="" />
+              <h2 class="h-title">Постер New Orlean vs Golden Stars</h2>
+              <p class="p-title">Дизайн</p>
+              <p class="p-title">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li class="list">
+            <a href="" class="decoration">
+              <img src="./img/port3.jpg" alt="" width="380" height="294" />
+              <h2 class="h-title">Ресторан Seafood</h2>
+              <p class="p-title">Приложение</p>
+              <p class="p-title">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li class="list">
+            <a href="" class="decoration">
+              <img src="./img/port4.jpg" alt="" width="380" height="294" />
+              <h2 class="h-title">Проект Prime</h2>
+              <p class="p-title">Маркетинг</p>
+              <p class="p-title">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li class="list">
+            <a href="" class="decoration">
+              <img src="./img/port5.jpg" alt="" width="380" height="294" />
+              <h2 class="h-title">Проект Boxes</h2>
+              <p class="p-title">Приложение</p>
+              <p class="p-title">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li class="list">
+            <a href="" class="decoration">
+              <img src="./img/port6.jpg" alt="" width="380" height="294" />
+              <h2 class="h-title">Inspiration has no Borders</h2>
+              <p class="p-title">Веб-сайт</p>
+              <p class="p-title">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li class="list">
+            <a href="" class="decoration">
+              <img src="./img/port7.jpg" alt="" width="380" height="294" />
+              <h2 class="h-title">Издание Limited Edition</h2>
+              <p class="p-title">Дизайн</p>
+              <p class="p-title">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li class="list">
+            <a href="" class="decoration">
+              <img src="./img/port8.jpg" alt="" width="380" height="294" />
+              <h2 class="h-title">Проект LAB</h2>
+              <p class="p-title">Маркетинг</p>
+              <p class="p-title">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+          <li class="list">
+            <a href="" class="decoration">
+              <img src="./img/port9.jpg" alt="" width="380" height="294" />
+              <h2 class="h-title">Growing Business</h2>
+              <p class="p-title">Приложение</p>
+              <p class="p-title">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- footer -->
+    <footer class="footer">
+      <h3>
+        <a href="" class="footer-logo"
+          ><span class="web-logo"> Web</span> Studio</a
+        >
+      </h3>
+      <address>
+        <p class="adres text">г. Киев, пр-т Леси Украинки, 26</p>
+        <p><a href="" class="adres-title link">info@example.com</a></p>
+        <p><a href="" class="adres-title link">+38 099 111 11 11</a></p>
+      </address>
+      <p class="join-in">присоединяйтесь</p>
+      <ul class="footer-title list">
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Инстаграм"
+            >Инстаграм</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Фейсбук "
+            >Фейсбук</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Линкеди"
+            >Линкедин</a
+          >
+        </li>
+      </ul>
       <p class="join-in text">подписаться на рассылку</p>
-    <div>
-      <input name="E-mail" type="text" value="E-mail" />
-      <a href="" class="button">Подписаться</a>
-    </div>
-    <p class="adres-title">2020 | Developed by GoIT Students</p>
-  </footer>
-</body>
-
+      <div>
+        <input name="E-mail" type="text" value="E-mail" />
+        <a href="" class="button">Подписаться</a>
+      </div>
+      <p class="adres-title">2020 | Developed by GoIT Students</p>
+    </footer>
+  </body>
 </html>
