--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <li class="regular">
           <a href="" class="link"><img src="./img/logo5.svg" alt="Brand" /></a>
         </li>
-        <li >
+        <li class="regular" >
           <a href="" class="link"><img src="./img/logo6.svg" alt="company nag line" /></a>
         </li>
       </ul>
