--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
     </section>
     <!--footer  -->
     <footer class="footer">
-      <h3 ><a href="" class="footer-logo"><span class="web-logo"> Web</span> Studio</a></h3>
+      <a href=""class="footer-logo"><span class="web-logo"> Web</span> Studio</a>
+       
       <address>
         <p class="adres text">г. Киев, пр-т Леси Украинки, 26</p>
         <p ><a href=""class=" adres-title link" >info@example.com</a></p>
@@ -173,7 +174,7 @@
       <p class="join-in text">подписаться на рассылку</p>
       <div>
         <input name="E-mail" type="text" value="E-mail" />
-        <a href="" class="button">Подписаться</a>
+        <button class="button">Подписаться</button> 
       </div>
       <p class="adres-title">2020 | Developed by GoIT Students</p>
     </footer>
