--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
     <!-- What are we doing -->
     <section >
       <h2 class="section-title caption">Чем мы занимаемся</h2>
-      <img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
-      <p><a href="" class="list-section"> Десктопные приложения</a></p>
-      <img src="./img/2.jpg" alt="мобильный" width="380" height="294" />
-      <p><a href="" class="list-section">Мобильные приложения</a></p>
-      <img src="./img/3.jpg" alt="монитор" width="380" height="294" />
-      <p><a href="" class="list-section">Дизайнерские решения</a></p>
+      <ul class="list">
+        <li><img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
+      <p><a href="" class="list-section"> Десктопные приложения</a></p></li>
+        <li><img src="./img/2.jpg" alt="мобильный" width="380" height="294" />
+      <p><a href="" class="list-section">Мобильные приложения</a></p></li>
+        <li><img src="./img/3.jpg" alt="монитор" width="380" height="294" />
+      <p><a href="" class="list-section">Дизайнерские решения</a></p></li>
+                  </ul>
     </section>
     <!-- team -->
     <section class="section team">
