--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <nav class="nav-text">
         <a href="./index.html" class="section-logo"> <span class="web-logo"> Web</span> Studio </a>
         <ul class="web-title list">
-          <li><a href="" class="link">Студия</a></li>
+          <li class='menu__li active' data-menuanchor="firstPage">
+          <a href="#" class="link ">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
