--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,9 @@
         </a>
         <ul class="web-title list">
           <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li li class="menu__li active" data-menuanchor="secondPage">
+            <a href="./portfolio.html" class="link">Портфолио</a>
+          </li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
         <ul class="info-title list">
