--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
       <p><a href="" class="list-section">Дизайнерские решения</a></p></li>
                   </ul>
     </section>
-    <!-- team -->
-    <section class="section team">
+    <!--our team -->
+    <section class="section-team">
       <h3 class="section-title caption">Наша команда</h3>
       <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" />
       <h3 class="section-title name-section">Джон Смит</h3>
