--- a/index.html
+++ b/index.html
@@ -90,42 +90,45 @@
     <!--our team -->
     <section class="section-team">
       <h3 class="section-title caption">Наша команда</h3>
-      <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" />
-      <h3 class="section-title name-section">Джон Смит</h3>
-      <p>Дизайнер продуктов</p>
-      <ul class="section-title list">
-        <li><a href="" class="link color " aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
+      <ul class="list">
+            <li> <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" /></li>
+            <li> <h3 class="section-title name-section">Джон Смит</h3></li>
+            <li><p>Дизайнер продуктов</p> </li>
+        </ul>
+        <ul class="section-title list">
+             <li><a href="" class="link color " aria-label="ссылка на Инстаграм">Инстаграм</a></li>
+             <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
+             <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
+             <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
-      <img src="./img/марта.jpg" alt="Марта Стюарт" width="278" height="260" />
-      <h3 class="section-title name-section">Марта Стюарт</h3>
-      <p>Фронтенд Разработчик</p>
+      <ul class="list">
+        <li> <img src="./img/марта.jpg" alt="Марта Стюарт" width="278" height="260" /></li>
+       <li> <h3 class="section-title name-section">Марта Стюарт</h3></li>
+       <li><p>Фронтенд Разработчик</p></li>
+      </ul>
       <ul class="section-title list">
         <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
         <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
         <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
-      <img
-        src="./img/роберт.jpg"
-        alt="Роберт Джекис"
-        width="278"
-        height="260"
-      />
-      <h3 class="section-title name-section">Роберт Джекис</h3>
-      <p>Маркетинг</p>
+      <ul class="list">
+        <li> <img  src="./img/роберт.jpg" alt="Роберт Джекис"  width="278"  height="260"/></li>
+        <li> <h3 class="section-title name-section">Роберт Джекис</h3></li>
+        <li>  <p>Маркетинг</p></li>
+      </ul>
       <ul class="section-title list ">
         <li ><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
         <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
         <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
-      <img src="./img/мартин.jpg" alt="Мартин Доу" width="278" height="260" />
-      <h3 class="section-title name-section">Мартин Доу</h3>
-      <p>Разработка пользовательского интерфейса</p>
-      <ul class="section-title list">
+      <ul class="list">
+        <li> <img src="./img/мартин.jpg" alt="Мартин Доу" width="278" height="260" /></li>
+        <li> <h3 class="section-title name-section">Мартин Доу</h3></li>
+        <li> <p>Разработка пользовательского интерфейса</p></li>
+      </ul>
+        <ul class="section-title list">
         <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
         <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
         <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
